# emei-motor-fault-detection

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  mosquitto.conf  sdkconfig.ci  sdkconfig.defaults  项目指导.txt
.claude/: rules.md
.claude/scripts/: check-firmware.sh
.github/workflows/: quality-gate.yml
components/adxl345/: CMakeLists.txt  adxl345.c  adxl345.h
components/dht11/: CMakeLists.txt  dht11.c  dht11.h
components/feature_extract/: CMakeLists.txt  feature_extract.c  feature_extract.h
components/led_alarm/: CMakeLists.txt  led_alarm.c  led_alarm.h
components/mqtt_client/: CMakeLists.txt  mqtt_app.h  mqtt_client.c
components/wifi_sta/: CMakeLists.txt  wifi_sta.c  wifi_sta.h
docs/: 111.md  CLAUDE-ops.md  debug-gdb-tutorial.md  development-standards.md  交接文档.md
docs/bugs/: INDEX.md
docs/features/: .template.md  INDEX.md
firmware/: .gdbinit  README-debug.md  gdb_debug.bat  openocd.cfg
huashan/: CMakeLists.txt  Makefile  build.sh  deploy_conv.cvimodel  huashan_bridge  motor_fault_bf16.cvimodel
huashan/bridge/: bridge.py  threshold_config.py
huashan/src/: fault_detect.c  fault_detect.h  feature_extract.c  feature_extract.h  main.c  mlp_classifier.c  mlp_classifier.h  mlp_weights.h  mqtt_mini.c  mqtt_mini.h  sliding_window.c  sliding_window.h  threshold_config.h  tpu_inference.c  tpu_inference.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
models/artifacts/: cnn_model.onnx  cnn_model.onnx.data  cnn_model.pth  cnn_model_op13_fixed.onnx  cnn_model_sim.onnx  deploy_conv.onnx  deploy_mlp.onnx  deploy_mlp.pth  (+4 more)
tools/: debug.bat
(+11 files in other folders)
